@@ -1,5 +1,6 @@
 package pmto._bpm.viaturas.config;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
@@ -7,19 +8,16 @@ import org.springframework.web.filter.CorsFilter;
 import java.util.Arrays;
 import java.util.List;
 
-
+@Configuration
 public class CorsConfig {
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",        // FRONT LOCAL
-                "https://pmto8bpm.com.br"
-        ));
-        config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization", "X-Client-Type"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedOrigins(List.of("http://localhost:5173", "exp://192.168.10.103:8081")); // ou usar AllowedOriginPatterns
+        config.setAllowedHeaders(List.of("Origin", "Content-Type", "Accept", "Authorization",  "X-Client-Type", "Access-Control-Allow-Credentials"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
 
         config.setExposedHeaders(List.of("Set-Cookie"));
